Add link check on client. Refactoring network.py

--- a/templates/main.html
+++ b/templates/main.html
@@ -15,6 +15,9 @@
                     <div id="warning" class="alert alert-danger" role="alert" style="display: none">
                         The link is not valid
                     </div>
+                    <div id="only_jpg" class="alert alert-danger" role="alert" style="display: none">
+                        The link must be to .jpg file
+                    </div>
                     <label for="link">Paste the link</label>
                     <input id="link" placeholder="your link" class="form-control"/>
                     <button id="btn_send" class="btn btn-sm btn-primary btn-block btn-mrg" disabled>Check</button>
