--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="static/main.css">
     <script src="static/common.js"></script>
     <head>
-        <title>Books</title>
+        <title>HotDogOrNot</title>
     </head>
     <body>
         <div class="container-fluid box">
